--- a/src/quicksplit/resources/quicksplit.properties
+++ b/src/quicksplit/resources/quicksplit.properties
@@ -1,2 +1,8 @@
 # CSV list of IP addresses authorised to access admin servlets
 authorisedAddresses=192.168.0.1,192.168.42.160,127.0.0.1,0:0:0:0:0:0:0:1
+
+# Season Data
+season.data.path=C:\\data\\SeasonDates.csv
+
+# Result Data
+result.data.path=C:\\data\\Results.csv
