--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ repositories {
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.4',
             'org.apache.commons:commons-io:1.3.2',
-            'com.h2database:h2:1.4.191'
+            'com.h2database:h2:1.4.191',
+            'org.thymeleaf:thymeleaf:3.0.0.RELEASE'
     
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0',
                     'javax.servlet.jsp:javax.servlet.jsp-api:2.3.2-b02',
