--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
             'org.apache.commons:commons-io:1.3.2',
             'com.h2database:h2:1.4.191',
             'org.thymeleaf:thymeleaf:3.0.0.RELEASE'
+            
+    testCompile 'junit:junit:4.12',
+                'com.codeborne:selenide:4.0'
     
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0',
                     'javax.servlet.jsp:javax.servlet.jsp-api:2.3.2-b02',
