Convert project to Spring framework

--- a/src/main/resources/quicksplit.properties
+++ b/src/main/resources/quicksplit.properties
@@ -1,3 +1,4 @@
-db.url=jdbc:h2:C:/data/quicksplit-dev;AUTO_SERVER=TRUE
+db.driverClassName=org.h2.Driver
+db.url=jdbc:h2:./quicksplit;AUTO_SERVER=TRUE
 db.username=sa
 db.password=
