--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,24 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'com.bmuschko.tomcat'
+apply plugin: 'project-report'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile         'org.apache.commons:commons-lang3:3.4',
+    compile         'org.springframework:spring-context:4.3.4.RELEASE',
+                    'org.springframework:spring-webmvc:4.3.4.RELEASE',
+                    'org.apache.commons:commons-lang3:3.4',
                     'org.apache.commons:commons-io:1.3.2',
+                    'org.apache.commons:commons-dbcp2:2.1.1',
                     'com.h2database:h2:1.4.191',
-                    'org.thymeleaf:thymeleaf:3.0.0.RELEASE'
+                    'org.thymeleaf:thymeleaf:3.0.2.RELEASE',
+                    'org.thymeleaf:thymeleaf-spring4:3.0.2.RELEASE',
+                    'org.flywaydb:flyway-core:4.0.3',
+                    'org.slf4j:slf4j-api:1.7.21',
+                    'org.slf4j:slf4j-log4j12:1.7.21'
             
     testCompile     'junit:junit:4.12',
                     'com.codeborne:selenide:4.0'
